[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://radar_enemi.tscn" type="PackedScene" id=3]
[ext_resource path="res://timer_score.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 542.043, 459.446 )

[node name="Timer" type="Timer" parent="."]

[node name="radar_enemi" parent="." instance=ExtResource( 3 )]
position = Vector2( 529.393, 504.4 )

[node name="timer_score" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 516.486, 510.815 )
scale = Vector2( 0.284846, 0.284846 )
texture = ExtResource( 5 )

[node name="start_txt" type="Node2D" parent="."]
z_index = -2

[node name="start_message" type="Label" parent="start_txt"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 404.724
margin_top = 488.701
margin_right = 511.724
margin_bottom = 502.701
rect_scale = Vector2( 2.30096, 2.30096 )
text = "Click to continue"

[node name="color" type="Node2D" parent="."]
z_index = -3

[node name="ColorRect" type="ColorRect" parent="color"]
margin_right = 28.0
margin_bottom = 40.0
rect_scale = Vector2( 37.6829, 25.9247 )
color = Color( 0.380392, 0.329412, 0.329412, 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
